# aurora_chess

./: .gitignore  README.md  engine_comunications.cpp  main.py  pubspec.yaml  pyproject.toml
backend/: .env.template  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ce154ef66241_initial_user_table.py  e3838b4d6371_initial_game_move_rating_table.py
backend/src/: dependencies.py  main.py
backend/src/api/: __init__.py  auth_router.py  chess.py  chess_router.py
backend/src/auth/: __init__.py  auth_router.py
backend/src/core/: config.py
backend/src/core/database/: db_helper.py
backend/src/core/engines/: chess_engine.py
backend/src/core/factories/: abstract_player_factory.py  abstract_player_session_factory.py  chess_player_factory.py  websocket_player_session_factory.py
backend/src/core/handlers/: connection_request_handler.py  default_handler.py  player_move_request_handler.py  reconnect_handler.py  room_init_request_handler.py  room_start_request_handler.py
backend/src/core/schemas/: move.py  player_move.py  player_move_request.py  player_move_response.py  room_connection_request.py  room_connection_response.py  (+5 more)
backend/src/utils/: chess_board.py  chess_rating.py
backend/tests/integration/: test_connection_to_room.py  test_create_room.py  test_game_process.py  test_game_start.py
backend/tests/unit/: test_chees_engine.py  test_default_handler.py  test_player_move_request_handler.py  test_room_init_request_handler.py  test_room_service.py  test_room_start_request_handler.py  test_websocket_player_session.py
(+263 files in other folders)
