[tool.poetry]
name = "aurora_chess"
version = "0.1.0"
description = ""
authors = ["Nikolay Koren <nikolai.koren2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pytest = "^8.3.1"
pydantic-settings = "^2.3.4"
pytest-cov = "^5.0.0"
black = "^24.8.0"
python-chess = "^1.999"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
jwt = "^1.3.1"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
